# hmsearch

./: .gitignore  CMakeLists.txt  README.md  hmsearch.hpp  main.cpp  search.cpp
data/: siftsmall_base.cws.bvecs  siftsmall_query.cws.bvecs
